# playground

./: .gitignore  AGENTS.md  Pipfile  README.md  go.work  pyproject.toml
.github/: copilot-instructions.md
ai/firecrawl/: Chart.yaml
ai/firecrawl/templates/: api-deployment.yaml  api-service.yaml  playwright-deployment.yaml  playwright-service.yaml  redis-deployment.yaml  redis-service.yaml  worker-deployment.yaml
ai/invoke-ai/: Chart.yaml  readme.md
ai/invoke-ai/templates/: deployment.yaml  service.yaml
ai/k8sgpt/: k8sgpt.yaml  readme.md  values.yaml
ai/kagent/: readme.md
ai/langflow/: Multi Agent.json  Single Agent.json  ide-values.yaml  readme.md
ai/ollama/: readme.md
ai/openwebui/: openwebui_values.yaml  readme.md
ai/smolagents_/: playground.ipynb  pyproject.toml
data_analytics/: collinearity.ipynb  data_modeling_canvas.md
data_analytics/pandas/: aggregations.ipynb
data_analytics/plotting/: seaborn_.ipynb
data_analytics/plotting/dynamic_tables/: beakerx.ipynb  dash_datatable.py  interest-rates.csv  qgrid_.ipynb
data_analytics/plotting/matplotlib_/: reference.ipynb
data_analytics/plotting/plotly_/: plotly_.ipynb  plotly_ipywidget.ipynb
data_analytics/sample_datasets/: california_housing.ipynb  titanic.ipynb
data_analytics/scikit-learn_/: pipelines.ipynb  reference.ipynb  transformers.ipynb
data_analytics/scikit-learn_/classification/: classifiers.py
data_analytics/scikit-learn_/regression/: svr.py
data_analytics/statsmodels_/: autoregress.ipynb
data_analytics/tensorflow_/keras_tutorials/: TfTutorial.py  cat_dog.py  tutorial_01.ipynb  tutorial_02.ipynb  tutorial_03.ipynb
data_engineering/mqtt/: client_transmitter.ipynb
dev_ops/: git.md  homebrew_.md
dev_ops/ansible/: readme.md  vault.yaml
dev_ops/ansible/create_hetzner_vms/: create_vms.yaml  hosts.ini  readme.md
dev_ops/ansible/reference/: command_line.md  playbook.yaml
dev_ops/ci/: github_actions_reference.yaml
dev_ops/docker/fastapi_app/: requirements.txt
dev_ops/docker_/flask_app/: Dockerfile
dev_ops/kubernetes/: kubectl.md  microk8s.md
dev_ops/kubernetes/_best_practices/: k8s_app_design.md  k8s_cluster_maintenance.md  k8s_networking.md  k8s_storage.md  k8s_workload_handling.md
dev_ops/kubernetes/auth/: README.md  authentik_values.yaml  (+3 more)
dev_ops/kubernetes/storage/local_storage_exporter/: Dockerfile  build.sh  pyproject.toml  readme.md
dev_ops/kubernetes/storage/local_storage_exporter/helmchart/: Chart.yaml  values.yaml
dev_ops/kubernetes/storage/local_storage_exporter/helmchart/templates/: deployment.yaml
dev_ops/kubernetes/storage/local_storage_exporter/src/: local_storage_exporter.py
dev_ops/kubernetes_/: kind.md  kubectl.md  kubernetes_resources.md  microk8s.md  minikube.md
dev_ops/linux/: bash_reference.sh  homebrew_.md  linux_administration.md  lvm.md  nfs.md  sed.md  ssh.md  ssh_1.md  ssh_2.md  tmux.md  ufw.md  unattended-upgrades.md
dev_ops/proxmox/: add_zigbee_usb_dongle.md  cloud_init.md  create_cloud_init_template.sh  installation.md  setup_new_disk.sh  wake_on_lan.md
dev_ops/terraform/: .gitignore
finance/: ib_tws_connection.py  stock_data_plotting.ipynb
finance/backtesting/vectorbt_play/: play.ipynb  pyproject.toml
finance/data_api/: ccxt_.ipynb  eod-histo-data_fundamental-data-example.json  eod_histo_data.ipynb  eod_histo_data_mp.py
finance/pandas/: rolling.ipynb
makefiles/: my_script.py
misc/: exceptions_.ipynb  git.md  object_otientation.py
ml_ops/kubeflow/: pyproject.toml
ml_ops/mlflow_/: play.ipynb  readme.md
ml_ops/pipelines/: README.md
software_dev/: administration.md  enums_.ipynb  exceptions_.ipynb  formatting.ipynb  git.md  list_comprehension.py  pathlib_.py  pipenv_.md  regex.md  scratchpad.ipynb  sequential_types.md  software_design_principles.md
software_dev/c++/: main  main.c
software_dev/django/: commands.md
software_dev/frontend/: html_reference.html
software_dev/go/: cli_reference.md  primitive_types.md
software_dev/golang/: basic_types.md  cli_reference.md  cli_reference.sh  reference.sh
software_dev/html/: html_reference.html
software_dev/java/: maven-reference.md
software_dev/javascript/: js_reference.html  play.js
software_dev/logging_/: logging_.py  tqdm_.py
software_dev/makefiles/: Makefile
software_dev/oop/: dependency_types.txt  get_set_property.py  layered_architecture.py  object_otientation.py  static_.ipynb  static_attr.py  static_property.py
software_dev/orm/: my_db.sqlite  sqlalchemy_orm.ipynb
software_dev/python/: benchmark.py  compare_lists.py  filehandling.ipynb  ipaddresses.ipynb  lambda.ipynb  linters_formatters.md  list_comprehension.py  magic_methods.md  pipenv_.md  poetry_.md  pushover.ipynb  regex.ipynb  schedule_.ipynb  sequential_types.md  signals_.py  uv.md
software_dev/scope/: my_module.py
software_dev/shellscripting/: hw.sh  reference.sh
software_dev/sqlalchemy_orm/: find_existing.ipynb  merging.ipynb  sqlalchemy_orm.ipynb  update.ipynb
software_dev/wxformbuilder/: gui.py  gui_app.py
software_eng/: homebrew_.md
software_eng/shellscripting/: command_eval.sh  run_container.sh
systems_eng/: git.md  homebrew_.md  linux_administration.md  linux_filesystem.md  sops.md  ssh.md  vscode-settings.md
systems_eng/ci/: github_actions_reference.yaml
systems_eng/kubernetes_/: helm_overview.md  kubectl.md
systems_eng/linux/: bash_reference.sh  linux_administration.md
systems_eng/loki_/: sample_app.py
systems_eng/mqtt/: client_receiver.ipynb  run_broker.sh
systems_eng/opcua/: server.py
systems_eng/shellscripting/: execute_on_fail.sh  reference.sh
(+518 files in other folders)
