[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin", email = "35747507+croidzen@users.noreply.github.com"}
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "asyncua>=0.9.94",
    "beautifulsoup4>=4.11.1",
    "ccxt>=1.92.19",
    "dagster",
    "dagster-webserver",
    "dash>=2.6.1",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-daq>=0.5.0",
    "dask[distributed]>=2024.7.1",
    "Django>=4.1",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.83.0",
    "flytekit>=1.16.1",
    "ib-insync>=0.9.70",
    "impacket>=0.10.0",
    "ipykernel>=6.15.1",
    "kubernetes>=29.0.0",
    "matplotlib>=3.5.3",
    "metaflow>=2.19.15",
    "mlflow>=2.19.0",
    "ntplib>=0.4.0",
    "numpy>=1.23.2",
    "paho-mqtt>=1.6.1",
    "pandas>=1.4.3",
    "plotly>=5.10.0",
    "qgrid>=1.3.1",
    "pip>=25.3",
    "prefect[ray]>=3.4.8",
    "psycopg2-binary>=2.9.3",
    "pysmb>=1.2.8",
    "pytest>=7.1.2",
    "ray[default]",
    "requests>=2.28.1",
    "responses>=0.21.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.1.2",
    "seaborn>=0.11.2",
    "smbprotocol>=1.10.1",
    "SQLAlchemy>=1.4.40",
    "statsmodels>=0.13.2",
    "tqdm>=4.64.0",
    "wandb>=0.17.8",
    "yfinance>=0.2.65",
    "zipline-reloaded>=3.1.1",
    "virtualenv>=20.31.2",
]

[dependency-groups]
dev = [
    "black>=23.1.0",
    "mypy>=1.0.1",
    "pylint>=2.16.2",
    "rope>=1.7.0",
    "pydantic>=1.10.5",
]
