[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "smolagents (>=1.10.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
