[tool.poetry]
name = "local-storage-exporter"
version = "0.1.0"
description = ""
authors = ["Martin <35747507+croidzen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kubernetes = "^31.0.0"
prometheus-client = "^0.21.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.1.0"
black = "^24.4.2"
mypy = "^1.10.0"
testcontainers = "^4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
